[gd_scene load_steps=8 format=3 uid="uid://k7jme3tsmc2t"]

[ext_resource type="Script" uid="uid://byap8d5j1bnoy" path="res://scripts/game.gd" id="1_lbhrr"]
[ext_resource type="Script" uid="uid://rdwqpjsngh43" path="res://scripts/paddle.gd" id="1_yqjtg"]
[ext_resource type="Script" uid="uid://dlsmdg4r0nv5i" path="res://scripts/point_area.gd" id="3_lnu2h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uwrxv"]
size = Vector2(43, 240)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yqjtg"]
size = Vector2(1920, 40.865)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lnu2h"]
size = Vector2(45, 1073)

[sub_resource type="LabelSettings" id="LabelSettings_lbhrr"]
font_size = 50

[node name="Game" type="Node2D"]
script = ExtResource("1_lbhrr")
round_limit = 1

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
offset = Vector2(960, 540)
metadata/_edit_lock_ = true

[node name="background" type="ColorRect" parent="."]
custom_minimum_size = Vector2(39.73, 0)
offset_right = 1920.0
offset_bottom = 1080.0
size_flags_horizontal = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
color = Color(0, 0, 0, 1)
metadata/_edit_lock_ = true

[node name="Divider" type="Node2D" parent="."]

[node name="ColorRect2" type="ColorRect" parent="Divider"]
offset_left = 960.0
offset_right = 2040.0
offset_bottom = 40.0
rotation = 1.5708

[node name="paddle" type="StaticBody2D" parent="."]
position = Vector2(2, 177)
script = ExtResource("1_yqjtg")
move_speed = 500
key_up = 87
key_down = 83

[node name="CollisionShape2D" type="CollisionShape2D" parent="paddle"]
position = Vector2(19.5, 120)
shape = SubResource("RectangleShape2D_uwrxv")

[node name="ColorRect" type="ColorRect" parent="paddle"]
offset_right = 40.0
offset_bottom = 240.0

[node name="paddle2" type="StaticBody2D" parent="."]
position = Vector2(1879, 165)
script = ExtResource("1_yqjtg")
move_speed = 500
key_up = 4194320
key_down = 4194322

[node name="CollisionShape2D" type="CollisionShape2D" parent="paddle2"]
position = Vector2(19.5, 120)
shape = SubResource("RectangleShape2D_uwrxv")

[node name="ColorRect" type="ColorRect" parent="paddle2"]
offset_right = 40.0
offset_bottom = 240.0

[node name="top" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="top"]
position = Vector2(961, 20.865)
shape = SubResource("RectangleShape2D_yqjtg")

[node name="ColorRect2" type="ColorRect" parent="top"]
offset_right = 1920.0
offset_bottom = 40.0

[node name="bottom" type="StaticBody2D" parent="."]
position = Vector2(0, 1040)
disable_mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="bottom"]
position = Vector2(963.25, 20.4325)
shape = SubResource("RectangleShape2D_yqjtg")

[node name="ColorRect3" type="ColorRect" parent="bottom"]
offset_right = 1920.0
offset_bottom = 40.0

[node name="pointArea" type="Area2D" parent="."]
script = ExtResource("3_lnu2h")

[node name="CollisionShape2D" type="CollisionShape2D" parent="pointArea"]
position = Vector2(-28.5, 536.5)
shape = SubResource("RectangleShape2D_lnu2h")

[node name="pointArea2" type="Area2D" parent="."]
position = Vector2(1981, 0)
script = ExtResource("3_lnu2h")

[node name="CollisionShape2D" type="CollisionShape2D" parent="pointArea2"]
position = Vector2(-28.5, 536.5)
shape = SubResource("RectangleShape2D_lnu2h")

[node name="p1ScoreText" type="Label" parent="."]
offset_left = 676.0
offset_top = 195.0
offset_right = 725.75
offset_bottom = 218.0
scale = Vector2(1.84, 1.84)
text = "1"
label_settings = SubResource("LabelSettings_lbhrr")
horizontal_alignment = 1
vertical_alignment = 1

[node name="p2ScoreText" type="Label" parent="."]
offset_left = 1109.0
offset_top = 195.0
offset_right = 1158.75
offset_bottom = 264.0
scale = Vector2(1.84, 1.84)
text = "1"
label_settings = SubResource("LabelSettings_lbhrr")
horizontal_alignment = 1
vertical_alignment = 1

[node name="origin" type="Node2D" parent="."]
position = Vector2(944, 528)

[connection signal="body_entered" from="pointArea" to="." method="_on_point_area_body_entered"]
[connection signal="body_entered" from="pointArea2" to="." method="_on_point_area_2_body_entered"]
